mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_return_void.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot return a value from a void function
--> test_scripts/error_cases/semantic_return_void.mux:3:10
   |
 3 |   return 1
   |          ^
   |
= help: This function is declared as 'returns void'. Either remove the return value or change the function's return type.
